Add TDOAs to swagger documentation + DTO
