# backend/docs/swagger.json
@@ -6,7 +6,6 @@
         "contact": {},
         "version": "1.0"
     },
-    "basePath": "/backendAPI",
     "paths": {
         "/data": {
             "post": {
@@ -117,7 +116,7 @@
                     "description": "The IDs of the predecessors of the log or span data",
                     "type": "array",
                     "items": {
-                        "type": "string"
+                        "$ref": "#/definitions/handler.EdgeDTO"
                     }
                 },
                 "span_dto": {
@@ -132,7 +131,7 @@
                     "description": "The IDs of the successors of the log or span data",
                     "type": "array",
                     "items": {
-                        "type": "string"
+                        "$ref": "#/definitions/handler.EdgeDTO"
                     }
                 }
             }
@@ -173,6 +172,23 @@
                     "items": {
                         "$ref": "#/definitions/handler.LogAndSpanDTO"
                     }
+                }
+            }
+        },
+        "handler.EdgeDTO": {
+            "type": "object",
+            "required": [
+                "id",
+                "tdoa"
+            ],
+            "properties": {
+                "id": {
+                    "description": "The ID of the associated log or span data",
+                    "type": "string"
+                },
+                "tdoa": {
+                    "description": "The TDOA of the associated log or span data assuming a log or span was successfully inferred",
+                    "type": "number"
                 }
             }
         },
