# backend/internal/query_server/handler/analytics_dto.go
@@ -82,11 +82,20 @@ type ChainOfEventsNodeDTO struct {
 	// The Cluster ID of the cluster belonging to the log or span data
 	ClusterId string `json:"cluster_id" validate:"required"`
 	// The IDs of the successors of the log or span data
-	Successors []string `json:"successors" validate:"required"`
+	Successors []EdgeDTO `json:"successors" validate:"required"`
 	// The IDs of the predecessors of the log or span data
-	Predecessors []string `json:"predecessors" validate:"required"`
+	Predecessors []EdgeDTO `json:"predecessors" validate:"required"`
 	// The details of the span data, if the data is a span
 	SpanDTO *SpanDTO `json:"span_dto"`
 	// The details of the log data, if the data is a log
 	LogDTO *LogDTO `json:"log_dto"`
+}
+
+// EdgeDTO represents an edge in the chain of events
+// @swagger:model EdgeDTO
+type EdgeDTO struct {
+	// The ID of the associated log or span data
+	Id string `json:"id" validate:"required"`
+	// The TDOA of the associated log or span data assuming a log or span was successfully inferred
+	TDOA float64 `json:"tdoa" validate:"required"`
 }
